[package]
name = "playground_candle"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]

serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

#candle-core = "0.5.1"
candle-core = {path="../candle/candle-core"}
#candle-nn = "0.5.1"
candle-nn = {path="../candle/candle-nn"}
candle-transformers = "0.5.1"
#candle-datasets = "0.5.1"
candle-datasets = {path="../candle/candle-datasets"}

rand = "0.8.5"
rand_xorshift = "0.3.0"
rand_distr = "0.4.3"

anyhow = "1.0.86"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png"] }
imageproc = { version = "0.24.0", default-features = false }



# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
# Enable some optimisations, but not all of it.
#opt-level = 2
# Only using line numbers as debug information shaves off 10 seconds on linking the viewer.
debug = 1
# Disable lto, it's slow for development
#lto = false
